- synchronized zoom level between Geoportail and google - corrected geoportail center shift from north origin - better IE support

--- a/sport-war/src/main/webapp/static/track/trackstyle.css
+++ b/sport-war/src/main/webapp/static/track/trackstyle.css
@@ -31,3 +31,8 @@ html, body, #center {
     background-color: white;
     border: #824900 medium solid;
 }
+
+#lolToken {
+    position: absolute;
+    right: 0;
+}
